# parablock

./: .gitignore  LICENSE  README.md
parablock/: README.md  pyproject.toml
parablock-demo/: Makefile  README.md  pyproject.toml
parablock-demo/.parablock/cache/: demo_demo.json  demo_trie_demo.json
parablock-demo/demo/: __init__.py  demo.py  main.py  trie_demo.py
parablock/parablock/: __init__.py  code_generator.py  decorator.py  executor.py  processor.py  registry.py  test_runner.py  utils.py
