[tool.poetry]
name = "parablock-demo"
version = "0.1.0"
description = "Demo project for Parablock"
authors = ["contact@ericdudley.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
parablock = {path = "../parablock", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"